--- a/PROJECTS/Project_InLock/Backend/senai.inlock.webAPI/senai.inlock.webAPI/senai.inlock.webAPI.csproj
+++ b/PROJECTS/Project_InLock/Backend/senai.inlock.webAPI/senai.inlock.webAPI/senai.inlock.webAPI.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.2" />
   </ItemGroup>
 
+	<PropertyGroup>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+		<NoWarn>$(NoWarn);1591</NoWarn>
+	</PropertyGroup>
+
 </Project>
